# hs-throwable-exceptions

./: .travis.yml  README.md  throwable-exceptions.cabal
example/: Main.hs
src/Control/Exception/: Throwable.hs
src/Control/Exception/Throwable/: TH.hs
test/: MainTest.hs
test/Control/Exception/: ThrowableTest.hs
test/Control/Exception/Throwable/: THTest.hs
