name:                throwable-exceptions
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/aiya000/throwable-exceptions#README.md
license:             MIT
license-file:        LICENSE
author:              aiya000
maintainer:          aiya000.develop@gmail.com
copyright:           aiya000
category:            Simple
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Wno-name-shadowing -Wno-unused-do-bind -Wunused-top-binds
  build-depends:       base >= 4.7 && < 5
